--- a/web/app/themes/pvtl/sass/theme/partials/_hero.scss
+++ b/web/app/themes/pvtl/sass/theme/partials/_hero.scss
@@ -74,6 +74,9 @@
       .image {
         margin-right: 20px;
         text-shadow: 0 3px 20px #000;
+        svg {
+          max-width: 100%;
+        }
       }
       .h5 {
         font-size: 18px;
